external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        kubernetes.io/ingress.class: alb
    name: external-ingress-lb
    namespace: istio-system
spec:
    rules:
        - http:
           paths:
            - path: /
              pathType: Prefix
              backend:
               service:
                name: istio-np
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
    annotations: {}
    name: istio-np
    namespace: istio-system
spec:
    type: NodePort
    ports:
        - port: 80
          protocol: TCP
          targetPort: 8080
    selector:
        app: istio-ingressgateway
        istio: ingressgateway

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: api-ext-vs
#   namespace: services-updated
# spec:
#   hosts:
#   - api-updated-external.nprod.incred.com
#   gateways:
#   - istio-system/istio-ingressgateway
#   http:
#   - name: api
#     route:
#     - destination:
#         host: api-svc.services-updated.svc.cluster.local
#         port:
#           number: 80
#     retries:
#       attempts: 5
#       perTryTimeout: 300s
