ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        kubernetes.io/ingress.class: alb
    name: external-ingress-lb
    namespace: istio-system
spec:
    rules:
        - http:
           paths:
            - path: /
              pathType: Prefix
              backend:
               service:
                name: istio-np
                port:
                  number: 80
